# hytech_hal

./: .gitignore  CMakeLists.txt  README.md  basic.stm32.ld  cortex-m-generic.ld  default.nix  flake.nix  main.cpp
cmake/: create_package.cmake  hytech_halConfig.cmake.in  stm32f4Config.cmake.in  toolchain-arm-none-eabi-gcc.cmake
include/hytech_hal/: hytech_hal.h
include/stm32f4/: stm32f4.h
src/: init.cpp  serialprint.cpp
